# conflate

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.builds/: archlinux-msrv.yml  archlinux.yml
.github/workflows/: audit.yml  careful.yml  ci-heavy.yml  ci.yml  coverage.yaml  cross-ci.yml  release-plz.yml
.reuse/: dep5
crates/conflate/: CHANGELOG.md  Cargo.toml  README.md
crates/conflate/src/: bool.rs  btreemap.rs  hashmap.rs  iter.rs  lib.rs  num.rs  option.rs  ord.rs  vec.rs
crates/conflate/tests/: compile.rs  derive.rs  strategies.rs
crates/conflate/tests/compile/: derive-enum.stderr  derive-invalid-default-strategy.stderr  derive-invalid-strategy.stderr  derive-missing-strategy.stderr  derive-no-strategy.stderr  derive-u8.stderr
crates/conflate_derive/: CHANGELOG.md  Cargo.toml  README.md
crates/conflate_derive/src/: lib.rs
crates/merge/: CHANGELOG.md  Cargo.toml  README.md
crates/merge/examples/: user.rs
crates/merge/src/: lib.rs
crates/merge_derive/: CHANGELOG.md  Cargo.toml  README.md
crates/merge_derive/src/: lib.rs
examples/: args.rs  user.rs
examples/args/: Cargo.toml
examples/args/src/: main.rs
examples/user/: Cargo.toml
examples/user/src/: main.rs
merge_derive/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
merge_derive/src/: lib.rs
src/: lib.rs
tests/: derive.rs  impls.rs  strategies.rs
tests/compile/: derive-enum.rs  derive-enum.stderr  derive-invalid-attribute.rs  derive-invalid-attribute.stderr  derive-invalid-default-strategy.rs  derive-invalid-default-strategy.stderr  derive-invalid-ignore.rs  derive-invalid-ignore.stderr  derive-invalid-skip.rs  derive-invalid-skip.stderr  derive-invalid-strategy.rs  derive-invalid-strategy.stderr  derive-missing-strategy.rs  derive-no-strategy.rs  derive-no-strategy.stderr  derive-u8.rs  derive-u8.stderr
