# SPDX-FileCopyrightText: 2020 Robin Krahl <robin.krahl@ireas.org>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "merge"
version = "0.1.0"
authors = ["Robin Krahl <robin.krahl@ireas.org>"]
categories = ["rust-patterns"]
documentation = "https://docs.rs/merge"
edition = "2018"
exclude = [".builds/*"]
homepage = "https://sr.ht/~ireas/merge-rs"
keywords = ["merge", "macros", "derive"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://git.sr.ht/~ireas/merge-rs"
description = "Merge multiple values into one"

[dependencies]
merge_derive = { path = "merge_derive", version = "0.1.0", optional = true }
num-traits = { version = "0.2.12", optional = true }

[dev-dependencies]
envy = "0.4"
structopt = "0.3"
toml = "0.5"
trybuild = "1.0"

[dev-dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
default = ["derive", "num", "std"]
derive = ["merge_derive"]
num = ["num-traits"]
std = []

[workspace]
members = ["merge_derive"]
