# SPDX-FileCopyrightText: 2020 Robin Krahl <robin.krahl@ireas.org>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "merge_derive"
version = "0.1.0"
authors = ["Robin Krahl <robin.krahl@ireas.org>"]
categories = ["rust-patterns"]
edition = "2018"
keywords = ["merge", "macros", "derive"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://git.sr.ht/~ireas/merge-rs/tree/master/merge_derive"
description = "Derive macro for the merge::Merge trait"

[lib]
proc-macro = true

[dependencies]
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
