# SPDX-FileCopyrightText: 2020 Robin Krahl <robin.krahl@ireas.org>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "merge_derive"
version = "0.1.0"
authors = ["Robin Krahl <robin.krahl@ireas.org>", "the rustic-rs team"]
categories = ["rust-patterns"]
documentation = "https://docs.rs/merge_derive"
edition = "2021"
homepage = "https://github.com/rustic-rs/merge"
keywords = ["merge", "macros", "derive"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/rustic-rs/merge/tree/main/crates/merge_derive"
rust-version = { workspace = true }
description = "Derive macro for the merge::Merge trait"

[lib]
proc-macro = true

[dependencies]
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0.77"
