[package]
name = "args"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false
rust-version.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
conflate = { workspace = true }
conflate_derive = { workspace = true }
envy = "0.4"
serde = "1.0"
serde_derive = "1.0"
toml = "0.8"

[lints]
workspace = true
